--- a/Fandoonotes/package.json
+++ b/Fandoonotes/package.json
@@ -26,6 +26,7 @@
     "http-status-codes": "^2.1.2",
     "jsonwebtoken": "^8.5.1",
     "mailgun-js": "^0.22.0",
+    "module-name": "^0.0.1-security",
     "mongoose": "^5.10.2",
     "morgan": "^1.10.0",
     "winston": "^3.3.3",
