[prasanna]: add archive and trash to fandoonotes

--- a/Fandoonotes/.env
+++ b/Fandoonotes/.env
@@ -7,3 +7,4 @@ DATABASE = mongodb://localhost:27017/Fandoonotes-lakshmi
 DATABASE_TEST = mongodb+srv://test:test@demo.aoloa.mongodb.net/test?retryWrites=true&w=majority
 
 SECRET_KEY = hiIamLakshmi
+RESET_SECRET_KEY = mynewkey
