--- a/Fandoonotes/package.json
+++ b/Fandoonotes/package.json
@@ -22,6 +22,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "googleapis": "^107.0.0",
     "helmet": "^4.1.0",
     "http-status-codes": "^2.1.2",
     "jsonwebtoken": "^8.5.1",
@@ -29,6 +30,8 @@
     "module-name": "^0.0.1-security",
     "mongoose": "^5.10.2",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.8",
+    "swagger-ui-express": "^4.5.0",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.0"
   },
